# ai-engineer-prep

./: .gitignore  4_Week_Job_Ready_AI_ML_Engineer_Plan.md  CLAUDE.md
week-1/day-1-foundation-fastapi-async-python/knowledge-assistant/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
week-1/day-1-foundation-fastapi-async-python/knowledge-assistant/app/: __init__.py  config.py  main.py
week-1/day-1-foundation-fastapi-async-python/knowledge-assistant/app/api/: routes.py
week-1/day-1-foundation-fastapi-async-python/knowledge-assistant/app/models/: schemas.py
week-1/day-1-foundation-fastapi-async-python/knowledge-assistant/app/services/: __init__.py  generation.py  ingestion.py  retrieval.py
week-1/day-1-foundation-fastapi-async-python/knowledge-assistant/tests/: conftest.py  test_api.py  test_ingestion.py
